<resources>

    <string name="app_name">MapMarker</string>
    <string name="marker">Marker</string>
    <string name="class_img">Class Image</string>
    <string name="create_marker">Create New Marker</string>
    <string name="create_description">Set Description</string>
    <string name="description">Description</string>
    <string name="qr_explanation">In order to create a marker you need to scan QR code,\nDo you have one ready?</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="scan_for_location">Scan QR Code for Location</string>
    <string name="welcome">Good luck finding your way.</string>
    <string name="sign_in"><u>Welcome, Please Signin / Signup</u></string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="email">Email: </string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="settinges">Settinges</string>
    <string name="interval">Intervals</string>
    <string name="update_interval">Update Interval</string>
    <string name="update_interval_summary">Choose interval time for updating the markers.</string>
    
    <string-array name="interval_list">
        <item>1 Minute</item>
        <item>2 Minute</item>
        <item>5 Minute</item>
        <item>10 Minute</item>
    </string-array>
    
        <string-array name="interval_list_values">
        <item>60000</item>
        <item>120000</item>
        <item>300000</item>
        <item>600000</item>
    </string-array>

</resources>