<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout" >

	<ImageView
	    android:id="@+id/map"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/class_img"
	    android:layout_alignParentTop="true"
	    android:src="@drawable/pernick_building" />
	
	<TextView
	    android:id="@+id/info_box"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:text="@string/welcome"
	    android:gravity="center"
	    android:textSize="28sp"
	    android:layout_marginBottom="40dp"/>
	
	<Button 
	    android:id="@+id/scan_for_location_btn"
	   	android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/scan_for_location"
	    android:layout_above="@id/info_box"
	    android:layout_centerHorizontal="true"
	    android:background="@drawable/button"
	    android:padding="5dp"
	    android:layout_marginBottom="20dp" />

</RelativeLayout>