<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<TextView
	    android:id="@+id/welcome_view"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:text="@string/sign_in"
	    android:gravity="center"
	    android:layout_marginTop="30dp"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/username_login_view"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/username"
	    android:gravity="center"
	    android:layout_below="@id/welcome_view"
	    android:layout_marginLeft="40dp"
	    android:layout_marginTop="30dp"
	    android:textSize="20sp" />
	
	<EditText
	    android:id="@+id/username_login_field"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text"
	    android:layout_alignBaseline="@id/username_login_view"
	    android:layout_toRightOf="@id/username_login_view"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="40dp"
	    android:layout_marginTop="20dp"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/password_login_view"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/password"
	    android:gravity="center"
	    android:layout_below="@id/username_login_view"
	    android:layout_marginLeft="40dp"
	    android:layout_marginTop="25dp"
	    android:textSize="20sp" />
	
	<EditText
	    android:id="@+id/password_login_field"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textPassword"
	    android:layout_alignBaseline="@id/password_login_view"
	    android:layout_toRightOf="@id/password_login_view"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="40dp"
	    android:layout_marginTop="20dp"
	    android:textSize="20sp" />
	
	<Button 
	    android:id="@+id/signin_btn"
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="5dp"
	    android:layout_marginLeft="40dp"
	    android:layout_marginRight="40dp"
	    android:text="@string/signin"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@id/password_login_view"
	    android:background="@drawable/button"
	    android:layout_marginTop="20dp"/>
	
	<TextView
	    android:id="@+id/username_signup_view"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/username"
	    android:gravity="center"
	    android:layout_below="@id/signin_btn"
	    android:layout_marginLeft="40dp"
	    android:layout_marginTop="30dp"
	    android:textSize="20sp" />
	
	<EditText
	    android:id="@+id/username_signup_field"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text"
	    android:layout_alignBaseline="@id/username_signup_view"
	    android:layout_toRightOf="@id/username_signup_view"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="40dp"
	    android:layout_marginTop="20dp"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/password_signup_view"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/password"
	    android:gravity="center"
	    android:layout_below="@id/username_signup_view"
	    android:layout_marginLeft="40dp"
	    android:layout_marginTop="25dp"
	    android:textSize="20sp" />
	
	<EditText
	    android:id="@+id/password_signup_field"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textPassword"
	    android:layout_alignBaseline="@id/password_signup_view"
	    android:layout_toRightOf="@id/password_signup_view"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="40dp"
	    android:layout_marginTop="20dp"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/email_signup_view"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/email"
	    android:gravity="center"
	    android:layout_below="@id/password_signup_view"
	    android:layout_marginLeft="40dp"
	    android:layout_marginTop="25dp"
	    android:textSize="20sp" />
	
	<EditText
	    android:id="@+id/email_signup_field"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textEmailAddress"
	    android:layout_alignBaseline="@id/email_signup_view"
	    android:layout_toRightOf="@id/email_signup_view"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="40dp"
	    android:layout_marginTop="20dp"
	    android:textSize="20sp" />
	
	<Button 
	    android:id="@+id/signup_btn"
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="5dp"
	    android:layout_marginLeft="40dp"
	    android:layout_marginRight="40dp"
	    android:text="@string/signup"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@id/email_signup_view"
	    android:background="@drawable/button"
	    android:layout_marginTop="20dp"/>
    

</RelativeLayout>